<resources>
    <string name="app_name">Practica24072019</string>
    <string name="usuario">USUARIO:</string>
    <string name="contrase_a">CONTRASEÑA:</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="no_control">Numero de Control:</string>
    <string name="ing_informatica">Ing. Informatica</string>
    <string name="ing_gestion_e">Ing. Gestion E.</string>
    <string name="ing_civil">Ing. Civil</string>
    <string name="profesores">PROFESORES.</string>
    <string name="fulanito_1">Fulanito 1</string>
    <string name="fulanito_2">Fulanito 2</string>
    <string name="fulanita_3">Fulanita 3</string>
    <string name="fulanita_4">Fulanita 4</string>
    <string name="fulanita_5">Fulanita 5</string>
    <string name="salir">SALIR</string>
    <string name="cargar">CARGAR</string>
    <string name="checkbox">CheckBox</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registro">REGISTRARSE</string>
</resources>
